fix detail and cart view in device

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -19,7 +19,7 @@
         <li style="position: absolute; padding-left: -1em; padding-top: 2em" class="nav-item ">
 
 
-          <div class="border" *ngIf="hide" style="background-color: white" >
+          <div class="border" *ngIf="!hide" style="background-color: white" >
             <div (click)="clickEvent(null)" class="dropdown-header">
               <span  class="fa fa-arrow-left fa-fw mr-3"></span>
               <strong  class="text-capitalize">Menu</strong>
