--- a/src/app/features/reserved-area/consumer/cart/cart.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.html
@@ -91,7 +91,7 @@
     <div *ngFor="let coupon of coupons" >
       <div style="background-color: snow" class="card flex-row flex-wrap">
         <div  style="background-color:snow" class="card-header border-0 col-4">
-          <img class="crop centered-and-cropped" [src]="imageUrl(coupon.image)" alt="">
+          <img class="crop-cart centered-and-cropped-cart" [src]="imageUrl(coupon.image)" alt="">
         </div>
         <div class="col-8" style="padding-bottom: 1em; padding-top: 1em" >
           <h5 class="card-text truncate ">{{coupon.title}}</h5>
