--- a/src/app/features/reserved-area/consumer/cart/cart.component.scss
+++ b/src/app/features/reserved-area/consumer/cart/cart.component.scss
@@ -14,12 +14,12 @@
 
 
 
-.crop {
+.crop-cart {
   width: 100px;
   height: 100px;
   overflow: hidden !important;
 }
 
-.centered-and-cropped {
+.centered-and-cropped-cart {
   object-fit: cover
 }
