--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="couponPass !== null" class="container">
   <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <div class="card mx-4" style="padding: 5px">
+    <div >
+      <div class="card" style="padding: 5px">
         <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
         <div class="card-body p-4">
           <h3 class="card-title mb-0">{{couponPass.title}}</h3>
