post pull federico

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -159,6 +159,7 @@
       </div>
     </div>
   </nav>
+  <app-core-breadcrumb *ngIf="isDesktop" style="padding-top: 10%;"></app-core-breadcrumb>
 
 </div>
 <ng-template #template>
