text-secondary settings in menu

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -132,12 +132,12 @@
             </a>
             <div id="menu_small" style="position: absolute" class="dropdown-menu  dropdown-menu-right float-right col-2">
               <div class="dropdown-header text-center">
-                <strong class="text-capitalize">Settings</strong>
+                <strong class="text-capitalize ">Settings</strong>
               </div>
               <a class="dropdown-item"
                  [routerLink]="['/reserved-area/' + userStringType +'/personal-info']">
                 <i class="fa fa-user"></i> Profile</a>
-              <a class="dropdown-item">
+              <a class="dropdown-item menu-collapsed text-secondary ">
                 <i class="fa fa-wrench"></i> Settings</a>
               <a class="dropdown-item " (click)="openModal(template)">
                 <i class="fa fa-lock"></i> Logout</a>
