fix bug and testing import-coupon

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -130,7 +130,7 @@
               <!--<i class="fa fa-2x fa-user-tie"></i>-->
               <img class="img-avatar" src="assets/img/avatars/8.jpg" alt="{{username}}">
             </a>
-            <div id="menu_small" style="position: absolute" class="dropdown-menu  dropdown-menu-right float-right col-2">
+            <div id="menu_small"  class="dropdown-menu position-menu-small dropdown-menu-right float-right col-2">
               <div class="dropdown-header text-center">
                 <strong class="text-capitalize ">Settings</strong>
               </div>
