--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
@@ -1,3 +1,4 @@
+
 .card-body p {
   font-size: 15px;
 }
@@ -34,3 +35,22 @@
 .centered-and-cropped {
   object-fit: cover
 }
+
+
+
+  //.row-for-desktop {
+  //
+  //  @extend .row ;
+  //}
+  //
+  //.div-for-desktop {
+  //
+  //  @extend .col-md-8 ;
+  //  @extend .offset-md-2 ;
+  //}
+  //
+  //.mx-4-for-desktop {
+  //
+  //  @extend .mx-4 ;
+  //}
+
