Coupon list responsive done

--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -2,7 +2,7 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 40%">Title XL</th>
+      <th style="width: 40%">Title</th>
       <th style="width: 10%">Image</th>
       <th style="width: 10%">Price</th>
       <th style="width: 10%">State</th>
@@ -68,7 +68,7 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 40%">Title LG</th>
+      <th style="width: 40%">Title</th>
       <th style="width: 10%">Image</th>
       <th style="width: 10%">Price</th>
       <th style="width: 10%">State</th>
@@ -118,7 +118,7 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th style="width: 48%">Title MD</th>
+      <th style="width: 48%">Title</th>
       <th style="width: 22%">Price</th>
       <th style="width: 10%">State</th>
       <th style="width: 10%">Sold</th>
