--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -58,7 +58,8 @@ app-core-sidebar {
 
 @media only screen and (max-width: 768px) {
   #main-container {
-    padding: 40px 28px;
+    /* padding: 40px 28px; tb/rl*/
+    padding: 0 28px 40px 28px;
   }
 
   #main-content .container-fluid {
