fix link sidebar, padding and fix breadcrumb

--- a/src/app/features/feature.component.html
+++ b/src/app/features/feature.component.html
@@ -4,8 +4,8 @@
   </app-core-sidebar>
 
   <div class="col px-0" id="main-content">
-    <app-core-breadcrumb></app-core-breadcrumb>
-    <div class="container-fluid" id="main-container">
+    <app-core-breadcrumb ></app-core-breadcrumb>
+    <div id = "margin-top-breadcrumb"  class="container-fluid margin-top-breadcrumb" id="main-container">
       <router-outlet></router-outlet>
     </div>
 
