fix merge with federico

--- a/src/app/features/feature.component.html
+++ b/src/app/features/feature.component.html
@@ -5,10 +5,11 @@
 
   <div class="col px-0" id="main-content">
     <app-core-breadcrumb ></app-core-breadcrumb>
-    <div id = "margin-top-breadcrumb"  class="container-fluid margin-top-breadcrumb" id="main-container">
+    <div  class="container-fluid" id="main-container">
       <router-outlet></router-outlet>
     </div>
 
     <app-core-footer></app-core-footer>
   </div>
 </div>
+
