--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -64,6 +64,7 @@ app-core-sidebar {
 
   #main-content .container-fluid {
     margin-bottom: 0;
+    margin-top: 5em;
   }
 }
 
@@ -277,7 +278,7 @@ table {
 
 
 @media screen and (min-width: 768px) {
-  .margin-top-breadcrumb {
+  #main-container {
 
     margin-top: 5em;
   }
